<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="start_time_title">Start Time</string>
    <string name="end_time_title">End Time</string>
    <string name="quiet_hours_title_preference">XQuietHours</string>
    <string name="app_name">XQuietHours</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mute_sound">NO SOUND</string>
    <string name="no_vibe">NO VIBE</string>
    <string name="no_led">NO LED</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="credits">Credits</string>
    <string name="enable_days_of_week_title">Select days of week?</string>
    <string name="enable_days_of_week_summary">Select days on which XQuietHours should be active</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thu">THU</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    
    <string name="additional_profile_title">Additional Quiet Hour</string>
	<string name="additional_profile_summary">Configure an additional quiet hour</string>
	<string name="configuration">Configuration</string>
</resources>