<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2014 Deepak Srivastav for XQuietHours Project 

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:minHeight="?android:attr/listPreferredItemHeight"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:minHeight="?android:attr/listPreferredItemHeight" >

        <LinearLayout
            android:id="@+id/start_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="vertical"
                android:paddingStart="16dip"
                android:paddingTop="6dip"
                android:text="@string/start_time_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/start_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="6dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>

        <View
            android:layout_width="1dip"
            android:layout_height="match_parent"
            android:layout_marginBottom="5dip"
            android:layout_marginTop="5dip"
            android:background="@android:drawable/divider_horizontal_dark" />

        <LinearLayout
            android:id="@+id/end_time"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:orientation="vertical"
                android:paddingStart="16dip"
                android:paddingTop="6dip"
                android:text="@string/end_time_title"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/end_time_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingBottom="6dip"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/separatorColor" />

    <LinearLayout
        android:id="@+id/repeat_days"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="top"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/MON"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/mon"
            android:textOn="@string/mon"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/TUE"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/tue"
            android:textOn="@string/tue"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/WED"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/wed"
            android:textOn="@string/wed"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/THU"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/thu"
            android:textOn="@string/thu"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/FRI"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/fri"
            android:textOn="@string/fri"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/SAT"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/sat"
            android:textOn="@string/sat"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/SUN"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/sun"
            android:textOn="@string/sun"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@color/separatorColor" />

    <LinearLayout
        android:id="@+id/notificationOpts"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="top"
        android:layout_marginEnd="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp"
        android:orientation="horizontal" >

        <ToggleButton
            android:id="@+id/vibe"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/no_vibe"
            android:textOn="@string/no_vibe"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/sound"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/mute_sound"
            android:textOn="@string/mute_sound"
            android:textSize="16sp" />

        <ToggleButton
            android:id="@+id/led"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/toggle_underline"
            android:checked="true"
            android:fontFamily="sans-serif-condensed"
            android:padding="0dp"
            android:textOff="@string/no_led"
            android:textOn="@string/no_led"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>